Use maven-shade-plugin instead of custom source-unpack/recompile